# component-price-tool

./: README.md  index.html  package.json  tailwind.config.js  vite.config.ts  一键安装.bat
.github/workflows/: build.yml
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/stores/: useAppStore.ts
